# bibimamba

./: README.md  bibiinstaller_configs.py  pyproject.toml
docs/: bibimamba.pptx
scripts/: commands.txt
src/bibimamba/: .condarc  main.py  mainwindow.py  mainwindow.ui
