[project]
name = "bibimamba"
version = "0.1.0"
description = "An Windows EXE for Portable Conda Installer."
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]
dependencies = [
    "pyqt6>=6.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
